--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "lint-staged": {
     "*.{ts,js,json,md}": [
-      "prettier --write"
+      "eslint --fix"
     ],
     "src/**/*.ts": [
       "eslint --fix",
@@ -61,6 +61,7 @@
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
+    "@nestjs/terminus": "^11.0.0",
     "@nestjs/testing": "^11.1.6",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
