--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "test:user": "jest --config jest.config.ts --coverage src/user",
     "test:prisma": "jest --config jest.config.ts --coverage src/prisma",
+    "test:strategy": "jest --config jest.config.ts --coverage src/user/strategy",
     "format:jest": "prettier --write jest.config.ts",
     "prepare": "husky"
   },
@@ -49,9 +50,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "google-auth-library": "^10.3.0",
     "graphql": "^16.11.0",
     "ioredis": "^5.7.0",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
