chat module completed

--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     "test:prisma": "jest --config jest.config.ts --coverage src/prisma",
     "test:strategy": "jest --config jest.config.ts --coverage src/user/strategy",
     "test:response": "jest --config jest.config.ts --coverage src/user/response",
+    "test:chat": "jest --config jest.config.ts --coverage src/chat",
     "format:jest": "prettier --write jest.config.ts",
-    "prepare": "husky",
-    "lint-staged": "lint-staged",
-    "postinstall": "husky install"
+    "prepare": "husky"
   },
   "lint-staged": {
     "*.{ts,js,json,md}": [
@@ -93,10 +92,5 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn run lint-staged"
-    }
   }
 }
