--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,16 @@
-version: '3.9'
+version: "3.9"
 
 services:
   app:
     container_name: nest-graphql-prisma-dev
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     volumes:
       - .:/app
-      - /app/node_modules   # ❌ REMOVE THIS LINE
+      - /app/node_modules
     env_file:
       - .env
-    depends_on:
-      - db
-      - redis
     command: npm run start:dev
-
-  db:
-    image: postgres:15-alpine
-    container_name: postgres-db
-    restart: always
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydb
-    ports:
-      - "5432:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-
-  redis:
-    image: redis:7-alpine
-    container_name: redis-server
-    ports:
-      - "6379:6379"
-
-volumes:
-  pgdata:
